Update Login function

--- a/logout-formular.html
+++ b/logout-formular.html
@@ -1,4 +1,4 @@
 <form method="POST" action="logout.php">
     <p>Logged in</p>
-    <input type=submit name=submit value="Ausloggen">
+    <input type=submit name=submit-logout value="Logout">
 </form>
