--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>vocheck</h1>
     <h2>The new vocabulary checking tool for teachers and pupils</h2>
 
+    <p>Testpage</p>
+
 </body>
 </html>
