--- a/login-formular.html
+++ b/login-formular.html
@@ -1,8 +1,22 @@
-<form method="POST" action="test.php">
-    <b>Login</b><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>vocheck</title>
+</head>
+<body>
+
+<h1>vocheck</h1>
+<h2>The new vocabulary checking tool for teachers and pupils</h2>
+
+<form method="POST" action="login.php">
+    <b>Login</b>
     <br>
-    Username: <input name="loginname"><br>
-    Passwort: <input name="loginpasswort" type=password><br>
     <br>
-    <input type=submit name=submit value="Einloggen">
+    <label for="input_username">Username: </label><input name="username" id="input_username"><br>
+    <label for="input_password">Password: </label><input name="password" id="input_password" type=password><br>
+    <input type=submit name=submit-login value="Login">
 </form>
+
+</body>
+</html>
