--- a/login-formular.html
+++ b/login-formular.html
@@ -12,17 +12,21 @@
 </head>
 <body>
 
-<h1>vocheck</h1>
-<h2>The new vocabulary checking tool for teachers and pupils</h2>
+<div class="row">
+    <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-12">
+        <h1>vocheck</h1>
+        <h2>The new vocabulary checking tool for teachers and pupils</h2>
 
-<form method="POST" action="login.php">
-    <b>Login</b>
-    <br>
-    <br>
-    <label for="input_username">Username: </label><input name="username" id="input_username"><br>
-    <label for="input_password">Password: </label><input name="password" id="input_password" type=password><br>
-    <input type=submit name=submit-login value="Login">
-</form>
+        <form method="POST" action="login.php">
+            <b>Login</b>
+            <br>
+            <br>
+            <label for="input_username">Username: </label><input name="username" id="input_username"><br>
+            <label for="input_password">Password: </label><input name="password" id="input_password" type=password><br>
+            <input type=submit name=submit-login value="Login">
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
