--- a/logout-formular.html
+++ b/logout-formular.html
@@ -12,13 +12,17 @@
 </head>
 <body>
 
-<h1>vocheck</h1>
-<h2>The new vocabulary checking tool for teachers and pupils</h2>
+<div class="row">
+    <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-12">
+        <h1>vocheck</h1>
+        <h2>The new vocabulary checking tool for teachers and pupils</h2>
 
-<form method="POST" action="logout.php">
-    <p>Logged in</p>
-    <input type=submit name=submit-logout value="Logout">
-</form>
+        <form method="POST" action="logout.php">
+            <p>Logged in</p>
+            <input type=submit name=submit-logout value="Logout">
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
