--- a/logout-formular.html
+++ b/logout-formular.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="row">
-    <div class="col-xl-8 col-xl-offset-2 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-12">
+    <div class="col-xl-8 offset-xl-2 col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-12 col-12">
         <h1>vocheck</h1>
         <h2>The new vocabulary checking tool for teachers and pupils</h2>
 
