--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="/login-formular.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about.html">About vocheck</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/contact.html">Contact</a>
             </li>
         </ul>
@@ -39,14 +39,7 @@
         <h1>vocheck</h1>
         <h2>The new vocabulary checking tool for teachers and pupils</h2>
 
-        <form method="POST" action="login.php">
-            <b>Login</b>
-            <br>
-            <br>
-            <label for="input_username">Username: </label><input name="username" id="input_username"><br>
-            <label for="input_password">Password: </label><input name="password" id="input_password" type=password><br>
-            <input type=submit name=submit-login value="Login">
-        </form>
+        <p>Contact section</p>
     </div>
 </div>
 
