--- a/static/head-imports.html
+++ b/static/head-imports.html
@@ -1,3 +1,6 @@
+<!-- viewport for mobile -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <!--vendor-->
 <script rel="stylesheet" type="text/javascript" src="vendor/jquery-3.3.1.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
